hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - <REPLACE_ME>
    secretName: tls-secret
  rules:
  - host: <REPLACE_ME>
    http:
      paths:
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /(.*)
